--- a/index.html
+++ b/index.html
@@ -1,46 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Ping Pong Game</title>
-</head>
-<body>
-	<canvas id="canvas" width="800" height="400"></canvas>
-	<script type="text/javascript" src="js/app.js"></script>
-	<script type="text/javascript">
-		//Sample functions, remove these functions and design ping-pong game with onInit and onUpdate.
+  <head>
+    <!-- meta tags are not necessary here, but having them always is a good practice -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- title -->
+    <title>Ping Pong</title>
+    <!-- some css styles -->
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+      }
 
-		app.onInit = function(){
-			this.nodes.push({
-				id : 'red-box',
-				x  : 100,
-				y  : 0,
-				width  : 100,
-				height : 100,
-				color  : 'red',
-				direction : 0
-			});
+      body {
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    </style>
+  </head>
+  <body>
 
-			this.nodes.push({
-				id : 'black-box',
-				x  : 50,
-				y  : 0,
-				width  : 150,
-				height : 150,
-				color  : 'black'
-			});
-		};
+    <!-- our "canvas" where we draw things-->
+    <canvas id="canvas" width="600" height="400">
+      
+    </canvas>
 
-		app.onUpdate = function(time){
-			this.getNode('black-box').y++;
-
-			if(Math.cos(this.timestamp / 100) > 0){
-				this.getNode('red-box').direction = -1;
-			}else{
-				this.getNode('red-box').direction = 1;
-			}
-
-			this.getNode('red-box').x+=this.getNode('red-box').direction;
-		};
-	</script>
-</body>
+    <!-- link to script.js -->
+    <script type="text/javascript" src="index.js"></script>
+  </body>
 </html>
